tests/baselines/reference/thisKeyword.errors.txt
thisKeyword.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
thisKeyword.ts(2,5): error TS2331: 'this' cannot be referenced in a module or namespace body.


==== thisKeyword.ts (2 errors) ====
    module foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        this.bar = 4;
        ~~~~
!!! error TS2331: 'this' cannot be referenced in a module or namespace body.
    }